Fix distorted small profile picture

--- a/platform-ui-skin/src/main/webapp/skin/less/platform/portlets/platformNavigation/UIUserNavigationPortlet/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/platform/portlets/platformNavigation/UIUserNavigationPortlet/Style.less
@@ -253,6 +253,7 @@
       margin-left: 15px;
       margin-top: 50px;
       border: 5px solid #ffffff;
+      object-fit: cover;
       .border-radius(5px 5px 5px 5px);
       .box-shadow(0px 2px 4px rgba(0, 0, 0, 0.17));
     }
